Fix All bugs and complete register function.